--- a/allprompts.html
+++ b/allprompts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutor Prompts Home</title>
+    <title>All prompts</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <style>
@@ -91,22 +91,17 @@
 
     
     <div class="container">
-	        <h1>Tutor Prompts Home</h1>
+	        <h1>All prompts</h1>
         <div>
-            <p>Place for Ai prompts to act as a personal tutor
+            <p>All the prompts</br>
             </p>
-			
-			<div>
+        </div>
+        </div>
+        <div>
             <p><a href="prompt-101.html" target="_blank">101 Show mistakes</a></p>
 			<p><a href="prompt-301.html" target="_blank">301 Create teaching material</a></p>
 			
 			           
-        </div>
-        </div>
-        </div>
-        <div class="links">
-            <a href="https://chat.openai.com/" target="_blank">ChatGPT</a>
-            <a href="https://dillinger.io/" target="_blank">Online Markdown Editor</a>
         </div>
 		
 
