--- a/allprompts.html
+++ b/allprompts.html
@@ -98,8 +98,9 @@
         </div>
         </div>
         <div>
-            <p><a href="prompt-101.html" target="_blank">101 Show mistakes</a></p>
-			<p><a href="prompt-301.html" target="_blank">301 Create teaching material</a></p>
+        <p><a href="prompt-101.html" target="_blank">101 Show mistakes</a></p>
+	<p><a href="prompt-301.html" target="_blank">301 Create teaching material</a></p>
+		<p><a href="prompt-harvard.html" target="_blank">Create Harvard references from links</a></p>
 			
 			           
         </div>
