--- a/allprompts.html
+++ b/allprompts.html
@@ -101,6 +101,7 @@
         <p><a href="prompt-101.html" target="_blank">101 Show mistakes</a></p>
 	<p><a href="prompt-301.html" target="_blank">301 Create teaching material</a></p>
 		<p><a href="prompt-harvard.html" target="_blank">Create Harvard references from links</a></p>
+		<p><a href="prompt-journalist-summary.html" target="_blank">Create journalist summary prompt</a></p>
 			
 			           
         </div>
