--- a/allprompts.html
+++ b/allprompts.html
@@ -102,7 +102,8 @@
 	<p><a href="prompt-301.html" target="_blank">301 Create teaching material</a></p>
 		<p><a href="prompt-harvard.html" target="_blank">Create Harvard references from links</a></p>
 		<p><a href="prompt-journalist-summary.html" target="_blank">Create journalist summary prompt</a></p>
-			
+
+				<p><a href="prompt-gonzo-journalist.html" target="_blank">Create gonzo-style journalist summary prompt</a></p>
 			           
         </div>
 		
