--- a/prompt-gonzo-journalist.html
+++ b/prompt-gonzo-journalist.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generate Wild Journalist Summary Prompt</title>
-    <link rel="stylesheet" href="https://markbeachill.github.io/tutorprompts/prompt-harvard.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <style>
         /* Additional styling for the prompt area */
         .prompt-box {
